# logicgates

./: CMakeLists.txt  README.md  run.py
include/: gates.hpp
src/: gates.cpp  main.cpp
